alignment issue
git-svn-id: http://vcs.taotesting.com/svn/oat/projects/tao/trunk@13957 62dfeb86-a93f-4914-9d13-15c0a160985d

--- a/views/css/errors.css
+++ b/views/css/errors.css
@@ -1,8 +1,3 @@
-/* center panel */
-html, body{
-	height: 100%;
-}
-
 body{
 	background-color: #eee;
 	font-family: Verdana, Arial, sans-serif;
@@ -16,15 +11,11 @@ h1{
 }
 
 #main{
-	position:absolute;
-	top:50%;
-	left:50%;
-	margin-top:-240px;
-	margin-left:-390px;
 	background-color: white;
 	width: 740px;
 	padding: 40px;
 	background-repeat: no-repeat;
+	margin: 100px auto;
 }
 
 #content{
